// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrimaryLink styles should render with active styles 1`] = `
.circuit-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--cui-fg-normal);
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  color: var(--cui-fg-accent);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 1279px) {
  .circuit-0 {
    margin-bottom: 1px;
  }

  .circuit-0::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid var(--cui-border-divider);
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-0 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-0:hover {
  background-color: var(--cui-bg-accent-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-accent-pressed);
}

.circuit-1 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
}

@media (max-width: 1279px) {
  .circuit-3 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<a
  aria-current="page"
  class="circuit-0"
  href="/url"
>
  <span
    class="circuit-1"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="circuit-2"
  >
    <span
      class="circuit-3"
    >
      Label
    </span>
  </span>
</a>
`;

exports[`PrimaryLink styles should render with badge styles 1`] = `
.circuit-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--cui-fg-normal);
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 1279px) {
  .circuit-0 {
    margin-bottom: 1px;
  }

  .circuit-0::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid var(--cui-border-divider);
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-0 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-1 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-1::before {
  display: block;
  content: '';
  position: absolute;
  top: -8px;
  right: -8px;
  width: 10px;
  height: 10px;
  background-color: var(--cui-fg-promo);
  border-radius: 100%;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

@media (max-width: 1279px) {
  .circuit-3 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<a
  class="circuit-0"
  href="/url"
>
  <span
    class="circuit-1"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="circuit-2"
  >
    <span
      class="circuit-3"
    >
      Label
    </span>
  </span>
</a>
`;

exports[`PrimaryLink styles should render with default styles 1`] = `
.circuit-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--cui-fg-normal);
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 1279px) {
  .circuit-0 {
    margin-bottom: 1px;
  }

  .circuit-0::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid var(--cui-border-divider);
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-0 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

.circuit-1 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

@media (max-width: 1279px) {
  .circuit-3 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<a
  class="circuit-0"
  href="/url"
>
  <span
    class="circuit-1"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="circuit-2"
  >
    <span
      class="circuit-3"
    >
      Label
    </span>
  </span>
</a>
`;

exports[`PrimaryLink styles should render with open styles 1`] = `
.circuit-0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 80px;
  width: 100%;
  background: none;
  border: none;
  outline: none;
  text-align: left;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: var(--cui-fg-normal);
  padding: 24px;
  -webkit-transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
  transition: color 120ms ease-in-out,background-color 120ms ease-in-out;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0:disabled {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width: 1279px) {
  .circuit-0 {
    margin-bottom: 1px;
  }

  .circuit-0::after {
    content: '';
    display: block;
    position: absolute;
    top: 100%;
    right: 24px;
    left: 24px;
    width: calc(100% - 2 * 24px);
    border-bottom: 1px solid var(--cui-border-divider);
    -webkit-transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
    transition: width 120ms ease-in-out,right 120ms ease-in-out,left 120ms ease-in-out;
  }
}

@media (min-width: 1280px) {
  .circuit-0 {
    height: 48px;
    width: 220px;
    padding: 12px;
    margin-bottom: 12px;
  }
}

@media (max-width: 1279px) {
  .circuit-0::after {
    right: 0;
    left: 0;
    width: 100%;
  }
}

.circuit-1 {
  display: inline-block;
  line-height: 0;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.circuit-2 {
  display: inline-block;
  line-height: 0;
}

.circuit-3 {
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
}

@media (max-width: 1279px) {
  .circuit-3 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

<a
  class="circuit-0"
  href="/url"
>
  <span
    class="circuit-1"
  >
    <svg
      fill="none"
      height="24"
      role="presentation"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22 12c0 .5-.4 1-1 1h-8v8c0 .5-.4 1-1 1s-1-.5-1-1v-8H3c-.5 0-1-.5-1-1s.5-1 1-1h8V3c0-.5.4-1 1-1s1 .5 1 1v8h8c.6 0 1 .5 1 1z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    class="circuit-2"
  >
    <span
      class="circuit-3"
    >
      Label
    </span>
  </span>
</a>
`;
